fix: layout adjustments ACESSAR button disappeared on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+
+
 body {
   color: var(--color-text-primary) !important;
   background-color: var(--color-background) !important;
+  scrollbar-width: thin; /* Adjust width as needed */
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(90, 90, 90);
+  border-radius: 9999px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255,255,255,0.05);
 }
